tests/invalid/import_inside_else/main.py
def main() -> None:
    if False:
        x: int = 1
    else:
        import imports.module_a
